# equipment-isolation-agent

./: .env.example  .gitignore  01_Equipment_Isolation_Selector.py  02_Equipment_Isolation_Config.py  02_Isolation_Policy_Config.py  03_Equipment_Boundary_Fetcher.py  04_Boundary_Data_Summary.py  05_Isolation_Candidate_Finder.py  06_Isolation_Candidate_Summary.py  07A_BBox_Resolver.py  07B_Final_Isolation_UI_Output.py  07_Final_Isolation_Output.py  08_Webhook.py  09_Plant360_AI_Output_Component.py  10_Project_Collections_Jobs_Debug.py  12_API_Data_Dump.py  13_Plant_Isolation_Instructions.py  14_Isolation_Evidence_State.py  15A_Deterministic_Evidence_Request_Planner.py  15_LLM_Evidence_Request_Planner.py  16_Isolation_Assurance_Validator.py  17_Isolation_Procedure_Writer.py  AGENTS.md  CLAUDE.md  Equipment Isolation Planner (Smart LOTO).md  Equipment_Isolation_Agent_Blueprint.md  Equipment_Isolation_Agent_Workflow_Simple.html  Equipment_Isolation_Flow_Overview.html  Equipment_Isolation_Training_Slideshow.html  README.md  __init__.py  bbox.py  bbox_geometry.py  bbox_util.py  boundary.py  candidates.py  config.py  eval_compare.py  evidence.py  flow.py  (+27 more)
agent/: __init__.py  __main__.py  cli.py  loop.py  osha.py  prompts.py  runner.py  session.py  summaries.py  tool_specs.py  tools.py
api-requests/: README.md  create-body-token-only.yml  create-invalid-blank-equipment.yml  create-isolation-run.yml  create-missing-project-context.yml  create-p3-viewer-run.yml  get-pid-image.yml  get-run-events.yml  get-run-result.yml  get-run-status.yml  get-run-trace.yml  get-run-viewer.yml  (+5 more)
(+72 files in other folders)
