[project]
name = "equipment-isolation"
version = "0.1.0"
description = "Deterministic local runner for equipment isolation using graph traversal and Plant360 APIs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "google-genai>=2.10.0",
    "gremlinpython>=3.6.2",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]

[tool.setuptools.packages.find]
where = ["."]
